# euler_rust

./: .gitignore  Cargo.toml  Cargo.toml.bak
benches/: benchmarks.rs
src/: lib.rs  main.rs
src/problem_1/: mod.rs
src/problem_18/: mod.rs
src/problem_2/: fibonacci.rs  mod.rs
src/problem_3/: mod.rs
src/problem_4/: mod.rs  palindrome.rs
src/problem_5/: mod.rs
src/problem_50/: mod.rs
src/problem_51/: mod.rs
src/problem_52/: mod.rs
src/problem_55/: mod.rs
src/problem_56/: mod.rs
src/problem_57/: mod.rs  readme.md
src/problem_6/: mod.rs
src/problem_60/: mod.rs
src/problem_61/: figurate.rs  mod.rs
src/problem_62/: mod.rs
src/problem_63/: mod.rs
src/problem_64/: mod.rs  readme.md
src/problem_65/: mod.rs
src/problem_66/: mod.rs  readme.md
src/problem_67/: mod.rs
src/problem_69/: mod.rs
src/problem_7/: mod.rs
src/problem_701/: mod.rs
src/problem_8/: mod.rs
