[package]
name = "euler"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19"}
prime_sieve = {path = "../prime_sieve"}
ibig = {version = "0.3.5"}
itertools = {version = "0.10.3"}
rayon = {version = "1.5.3"}

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmarks"
harness = false
